<resources>
    <string name="app_name">CalculatorKotlin</string>
    <string name="btnReset">NUM</string>
    <string name="result_hint">Result</string>
    <string name="clear_button">⌫</string>
    <string name="divide_button">/</string>
    <string name="multiply_button">x</string>
    <string name="minus_button">-</string>
    <string name="plus_button">+</string>
    <string name="btnEquals">=</string>
    <string name="btnDot">.</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
</resources>